fix: error on generate password

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Inter+Tight:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>word.</title>
+    <title>password</title>
   </head>
   <body>
     <div id="root"></div>
